[project]
authors = [{name = "Bror Jonsson", email = "brorfred@gmail.com"}]
dependencies = []
name = "omi_argo_floats"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
omi_argo_floats = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.4.2,<3"
scipy = ">=1.17.0,<2"
pandas = ">=3.0.0,<4"
xarray = ">=2026.1.0,<2027"
jupyterlab = ">=4.5.3,<5"
jupyter = ">=1.1.1,<2"
matplotlib = ">=3.10.8,<4"
argopy = ">=0.1.6,<0.2"
ipython = ">=9.10.0,<10"
